# dados-agent-ia

./: .gitignore  README.md
mcp-agent-ia/: agents.py  main.py  tasks.py
mcp_agent_n8n_ia/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  report.md
mcp_agent_n8n_ia/src/: report.md
mcp_agent_n8n_ia/src/mcp_agent_n8n_ia/: crew.py  main.py  run_app.py
mcp_agent_n8n_ia/src/mcp_agent_n8n_ia/config/: agents.yaml  tasks.yaml
mcp_agent_n8n_ia/src/mcp_agent_n8n_ia/tools/: custom_tool.py
script_process_monitoria/shell_script/: run_workflow_n8n_athena_error.sh  run_workflow_n8n_athena_execution.sh  run_workflow_n8n_consulta_particularity.sh  run_workflow_n8n_crewai.sh  run_workflow_n8n_insert_particularity.sh  run_workflow_n8n_sqlserver_alertas_erros_operacionais.sh  run_workflow_n8n_sqlserver_alertas_erros_resultados.sh  run_workflow_n8n_sqlserver_alertas_erros_volumes.sh  run_workflow_n8n_sqlserver_alertas_inconsistencia.sh
script_process_monitoria/src/: run_api_webhook_n8n_particularidade.py  run_fastapi_crewia.py  run_workflow_n8n_athena.py  run_workflow_n8n_insert_particularity.py  run_workflow_n8n_particularity.py  run_workflow_n8n_read_particularity.py  run_workflow_n8n_sqlserver_alertas.py
script_process_monitoria/src/conectores/: conectar_sql_server.py
script_process_monitoria/src/resource/: utilitarios.py
script_process_monitoria/src/sql/: script_athena_process_error.sql  script_athena_process_executados.sql  sqlserver_alerta_boletas_particulary.sql  sqlserver_alerta_inconsistencia.sql  sqlserver_alerta_posicao.sql  (+3 more)
