[project]
name = "mcp_agent_n8n_ia"
version = "0.1.0"
description = "mcp-agent-n8n-ia using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0"
]

[project.scripts]
mcp_agent_n8n_ia = "mcp_agent_n8n_ia.main:run"
run_crew = "mcp_agent_n8n_ia.main:run"
train = "mcp_agent_n8n_ia.main:train"
replay = "mcp_agent_n8n_ia.main:replay"
test = "mcp_agent_n8n_ia.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
